--- a/frontend/src/pages/MarketplacePage.module.css
+++ b/frontend/src/pages/MarketplacePage.module.css
@@ -13,18 +13,18 @@
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
-  overflow: hidden; /* Скрываем части картинки, выходящие за скругленные углы */
+  overflow: hidden;
 }
 
 .itemImage {
   width: 100%;
   height: 150px;
-  object-fit: cover; /* Картинка заполнит блок без искажений */
+  object-fit: cover;
 }
 
 .itemContent {
   padding: 15px;
-  flex-grow: 1; /* Этот блок будет занимать все доступное пространство */
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
@@ -39,14 +39,14 @@
 .itemDescription {
   color: #555;
   font-size: 14px;
-  flex-grow: 1; /* Описание будет растягиваться, отодвигая цену вниз */
+  flex-grow: 1;
   margin-bottom: 15px;
 }
 
 .itemPrice {
   font-size: 16px;
   font-weight: bold;
-  color: #5CA14A;
+  color: #5CA1A;
 }
 
 .buttonWrapper {
