--- a/frontend/src/pages/RoulettePage.module.css
+++ b/frontend/src/pages/RoulettePage.module.css
@@ -56,7 +56,7 @@
     background: linear-gradient(180deg, #ffffff, #e0e0e0);
 }
 
-.shadow {
+/*.shadow {
     position: absolute;
     left: 0;
     right: 0;
@@ -80,7 +80,7 @@
     height: 100%;
     box-shadow: inset 0 0 15px rgba(0,0,0,0.4);
     border-radius: 5px;
-}
+}*/
 
 .spinButton {
     width: 100%;
