--- a/frontend/src/pages/RoulettePage.module.css
+++ b/frontend/src/pages/RoulettePage.module.css
@@ -8,8 +8,11 @@
 }
 
 .slotMachine {
-    width: 100%;
-    height: 180px;
+    width: 90vw; /* Ширина относительно экрана */
+    max-width: 400px; /* Максимальная ширина */
+    height: auto; /* Высота автоматическая */
+    aspect-ratio: 400 / 150; /* Сохраняем пропорции (ширина / высота) */
+
     background-image: url('https://i.postimg.cc/k4gPr3sn/CKJN-VFIBYF.webp');
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -17,10 +20,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 45px;
+    padding: 0 11.25%; /* Отступы в процентах (45px от 400px = 11.25%) */
     box-sizing: border-box;
     position: relative;
     overflow: hidden;
+    margin: 0 auto; /* Центрируем машину */
 }
 
 .reelsContainer {
