--- a/frontend/src/pages/RoulettePage.module.css
+++ b/frontend/src/pages/RoulettePage.module.css
@@ -29,9 +29,9 @@
 
 .reelsContainer {
     display: flex;
-    gap: 6px;
+    gap: 22px;
     width: 100%;
-    height: 112px;
+    height: 120px; /* <-- НАСТРОЙКА ВЫСОТЫ ОКОШЕК */
     overflow: hidden;
 }
 
@@ -40,6 +40,7 @@
     height: 100%;
     position: relative;
     overflow: hidden;
+    border-radius: 15px; /* <-- НАСТРОЙКА СКРУГЛЕНИЯ УГЛОВ */
 }
 
 .reelTrack {
@@ -49,7 +50,7 @@
 
 .symbol {
     width: 100%;
-    height: 120px;
+    height: 120px; /* <-- ЭТО ЗНАЧЕНИЕ ДОЛЖНО СОВПАДАТЬ С ВЫСОТОЙ .reelsContainer */
     flex-shrink: 0;
     display: flex;
     align-items: center;
