--- a/frontend/src/pages/RoulettePage.module.css
+++ b/frontend/src/pages/RoulettePage.module.css
@@ -4,7 +4,7 @@
     height: auto;
     aspect-ratio: 926 / 472;
     margin: 20px auto;
-    background-image: url('https://i.postimg.cc/k4gPr3sn/CKJN-VFIBYF.webp');
+    background-image: url('https://s.iimg.su/s/25/gs3JliGxLndpQlQeQYFnLgn0PaAgjRHyKbCjHVYL.png');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
